// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`a running turn > a revoked attachment says the result will not be shown 1`] = `
article aria-label="질문 1"
  div
    div
      p "하자보수 기간은?"
  section aria-label="답변" aria-busy="true"
    div
      div aria-live="polite"
        span
          span aria-hidden="true"
          "취소 요청됨"
        span "이 요청의 결과는 답변으로 표시하지 않습니다. 진행 중인 호출이 끝나면 비용을 정산합니다."
`;

exports[`a running turn > streams a provisional answer and can be cancelled 1`] = `
article aria-label="질문 1"
  div
    div
      p "하자보수 기간은?"
  section aria-label="답변" aria-busy="true"
    div
      div aria-live="polite"
        span
          span aria-hidden="true"
          "작성 중 · 검증 전"
        span "이 요청의 예약 최대 비용 $0.0250"
        button type="button" "요청 취소"
      div
        p "검증 전 임시 답변입니다. 근거 검증이 끝나면 확정된 답변이나 실패 상태로 바뀝니다."
        p
          "작성 중인 요약"
          span
            span
              span "["
              "1"
              span "]"
        section aria-label="답변 내용"
          div
            p
              "첫 문장"
              span
                span
                  span "["
                  "1"
                  span "]"
                span
                  span "["
                  "2"
                  span "]"
`;

exports[`asking > an answer, its first citation opened, then a follow-up and 새 대화 1`] = `
main
  header
    h1 "질문하기"
    p "제공된 과거 공고(2021-10 ~ 2025-02) 기준입니다. 현재 입찰 가능 여부는 이 자료로 판단할 수 없습니다."
  div dir="ltr" role="radiogroup" data-variant="outline" aria-label="질문 범위" tabindex="0"
    button type="button" data-state="on" role="radio" aria-checked="true" data-variant="outline" tabindex="-1" "선택한 문서"
    button type="button" data-state="off" role="radio" aria-checked="false" data-variant="outline" tabindex="-1" "전체 문서"
  ul
    li
      div
        div
          p "통합 정보시스템 구축"
          p
            "한국교육학술정보원"
            " · "
            "1억 3,000만원"
            " · 공개 "
            "2024-03-02"
            " · "
            "PDF"
            " · "
            "자동 대조 통과"
        button type="button" aria-label="통합 정보시스템 구축 선택 해제"
          svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"
      a href="/api/originals/doc-aaaaaaaa/hash-a"
        svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"
        "원문 파일 받기"
  div
    div
      div
        h2
          "대화 "
          span
            "질문 "
            "1"
            "개"
        button type="button" "새 대화"
      article aria-label="질문 1"
        div
          div
            p "하자보수 기간은?"
        section aria-label="답변" aria-busy="false"
          div
            div
              span
                span aria-hidden="true"
                "답변"
              p
                "하자보수 기간은 12개월입니다."
                span
                  button type="button" aria-pressed="true" aria-label="근거 1 원문 보기"
                    span "["
                    "1"
                    span "]"
                  button type="button" aria-pressed="false" aria-label="근거 2 원문 보기"
                    span "["
                    "2"
                    span "]"
            section aria-label="답변 내용"
              div
                p
                  "계약 후 12개월 동안 하자를 보수합니다."
                  span
                    button type="button" aria-pressed="false" aria-label="근거 2 원문 보기"
                      span "["
                      "2"
                      span "]"
                    button type="button" aria-pressed="false" aria-label="근거 3 원문 보기"
                      span "["
                      "3"
                      span "]"
                p
                  span
                    span aria-hidden="true"
                    "추론"
                  "무상 보수로 보입니다."
            p
              "요청 "
              "req-0000"
              " · "
              "완료"
              " · "
              "정산됨"
              " · "
              "정산 $0.0012"
      form
        div
          label for="question" "질문"
          textarea id="question" rows="1" maxlength="2000" placeholder="이어서 질문하세요"
        div
          div dir="ltr" role="radiogroup" data-variant="outline" aria-label="질문 방식" tabindex="0"
            button type="button" data-state="on" role="radio" aria-checked="true" data-variant="outline" tabindex="-1"
              "근거 기반 답변"
              span "유료"
            button type="button" data-state="off" role="radio" aria-checked="false" data-variant="outline" tabindex="-1"
              "기본 정보"
              span "무료"
            button type="button" data-state="off" role="radio" aria-checked="false" data-variant="outline" tabindex="-1"
              "요구사항 목록"
              span "무료"
          button type="submit" "이어서 질문 · 유료 2회"
    aside tabindex="-1" aria-label="대화 근거"
      div
        p "질문 1의 근거"
        button type="button" aria-label="근거 닫기"
          svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"
      div
        div
          h3
            "근거 "
            span "1"
            " 원문 인용"
          p "통합 정보시스템 구축"
          p
            "PDF 12쪽 (인쇄 쪽번호 11) · 제3장 > 하자보수"
            " · "
            "자동 대조 통과"
        div
          blockquote
            div
              p "하자보수 기간은 검수 후 12개월로 한다."
        div
          button type="button" aria-expanded="false" "앞뒤 문단 포함 전체 원문 보기"
        a href="/api/originals/doc-aaaaaaaa/hash-a"
          svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"
          "원문 파일 받기"
  div data-state="closed"
    button type="button" aria-expanded="false" data-state="closed"
      "내 최근 요청 "
      svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"
    div data-state="closed" id="radix-_r_1j_" hidden
`;

exports[`selection and modes > nothing selected: the empty state, and the documents to pick from 1`] = `
div
  div
    aside
      div
        form role="search" aria-label="문서 찾기"
          h2 "문서 찾기"
          div
            svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"
            label for="q" "검색어"
            input id="q" placeholder="사업명, 내용, 요구사항 코드" value
          div
            label for="inst" "발주 기관"
            input id="inst" placeholder="예: 한국교육학술정보원" value
          div data-state="closed"
            button type="button" aria-expanded="false" data-state="closed"
              "상세 조건 "
              svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"
            div data-state="closed" id="radix-_r_0_" hidden
          button type="submit" "검색"
        div aria-live="polite"
          p
            "3"
            "건 · 질문할 수 있는 문서가 먼저 나옵니다 · 최대 2개 선택"
          ul
            li
              div
                button type="button" role="checkbox" aria-checked="false" data-state="unchecked" value="on" id="pick-doc-aaaaaaaa"
                label for="pick-doc-aaaaaaaa"
                  span "통합 정보시스템 구축"
                  span
                    "한국교육학술정보원"
                    " · "
                    "1억 3,000만원"
                    " · 마감 "
                    "2024-03-20 10:00"
                  div
                    span
                      span aria-hidden="true"
                      "질문 가능"
                    span
                      span aria-hidden="true"
                      "자동 대조 통과"
            li
              div
                button type="button" role="checkbox" aria-checked="false" data-state="unchecked" value="on" id="pick-doc-bbbbbbbb"
                label for="pick-doc-bbbbbbbb"
                  span "학사 행정 고도화"
                  span
                    "기관 미상"
                    " · "
                    "5,230만원"
                    " · 마감 "
                    "2024-03-20 10:00"
                  div
                    span
                      span aria-hidden="true"
                      "질문 가능"
                    span
                      span aria-hidden="true"
                      "자동 대조: 확인 필요"
                    span
                      span aria-hidden="true"
                      "기록 충돌: "
                      "사업 금액"
            li
              div
                button type="button" role="checkbox" aria-checked="false" data-state="unchecked" value="on" id="pick-doc-cccccccc"
                label for="pick-doc-cccccccc"
                  span "미색인 문서"
                  span
                    "한국교육학술정보원"
                    " · "
                    "1억 3,000만원"
                    " · 마감 "
                    "2024-03-20 10:00"
                  div
                    span
                      span aria-hidden="true"
                      "색인 전"
                    span
                      span aria-hidden="true"
                      "원문 대조 전"
    main
      header
        h1 "질문하기"
        p "제공된 과거 공고(2021-10 ~ 2025-02) 기준입니다. 현재 입찰 가능 여부는 이 자료로 판단할 수 없습니다."
      div dir="ltr" role="radiogroup" data-variant="outline" aria-label="질문 범위" tabindex="0"
        button type="button" data-state="on" role="radio" aria-checked="true" data-variant="outline" tabindex="-1" "선택한 문서"
        button type="button" data-state="off" role="radio" aria-checked="false" data-variant="outline" tabindex="-1" "전체 문서"
      div
        p "질문할 문서를 고르세요"
        p "하나를 고르면 질문할 수 있고, 두 개를 고르면 비교할 수 있습니다. 문서를 모르면 ‘전체 문서’로 질문하세요."
      div data-state="closed"
        button type="button" aria-expanded="false" data-state="closed"
          "내 최근 요청 "
          svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"
        div data-state="closed" id="radix-_r_3_" hidden
`;

exports[`selection and modes > one document offers answer, basic information and requirements 1`] = `
main
  header
    h1 "질문하기"
    p "제공된 과거 공고(2021-10 ~ 2025-02) 기준입니다. 현재 입찰 가능 여부는 이 자료로 판단할 수 없습니다."
  div dir="ltr" role="radiogroup" data-variant="outline" aria-label="질문 범위" tabindex="0"
    button type="button" data-state="on" role="radio" aria-checked="true" data-variant="outline" tabindex="-1" "선택한 문서"
    button type="button" data-state="off" role="radio" aria-checked="false" data-variant="outline" tabindex="-1" "전체 문서"
  ul
    li
      div
        div
          p "통합 정보시스템 구축"
          p
            "한국교육학술정보원"
            " · "
            "1억 3,000만원"
            " · 공개 "
            "2024-03-02"
            " · "
            "PDF"
            " · "
            "자동 대조 통과"
        button type="button" aria-label="통합 정보시스템 구축 선택 해제"
          svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"
      a href="/api/originals/doc-aaaaaaaa/hash-a"
        svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"
        "원문 파일 받기"
  div
    div
      form
        div dir="ltr" role="radiogroup" data-variant="outline" aria-label="질문 방식" tabindex="0"
          button type="button" data-state="on" role="radio" aria-checked="true" data-variant="outline" tabindex="-1"
            "근거 기반 답변"
            span "유료"
          button type="button" data-state="off" role="radio" aria-checked="false" data-variant="outline" tabindex="-1"
            "기본 정보"
            span "무료"
          button type="button" data-state="off" role="radio" aria-checked="false" data-variant="outline" tabindex="-1"
            "요구사항 목록"
            span "무료"
        div
          label for="question" "질문"
          textarea id="question" rows="3" maxlength="2000" placeholder="예: 하자보수 기간과 조건은 무엇인가요?"
        div
          button type="submit" "답변 받기 · 유료 1회"
  div data-state="closed"
    button type="button" aria-expanded="false" data-state="closed"
      "내 최근 요청 "
      svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"
    div data-state="closed" id="radix-_r_7_" hidden
`;

exports[`selection and modes > two documents offer comparison; their warnings show on the cards 1`] = `
[
  "문서 1통합 정보시스템 구축한국교육학술정보원 · 1억 3,000만원 · 공개 2024-03-02 · PDF · 자동 대조 통과원문 파일 받기",
  "문서 2학사 행정 고도화기관 미상 · 5,230만원 · 공개 2024-03-02 · HWP · 자동 대조: 확인 필요같은 원문에 연결된 다른 공고와 값이 다릅니다: 사업 금액자동 원문 대조에서 추출 결과와 원문이 다른 곳이 발견되었습니다. 표·수식·숫자는 원문 파일로 확인하세요.원문 파일 받기",
]
`;
